PyMaker/datas/object2/RawHTML/i1/Python_DOC_referPages.i-need-to-write-a-python-script-which-could-tell-me-if-i-am-connected-to-vpn-or.txt
<div class="post-text" itemprop="text">
<p>Right now I am trying to write a python script which could give a binary result to check if my machine is connected to Corporate_VPN (Connection_Name) OR Not connected to Corporate_VPN.</p>
<p>I have tried few articles and post which I could find but with no success.
Here are some:</p>
<p>I have tried this post: <a href="https://stackoverflow.com/questions/36816282/getting-connected-vpn-name-in-python">Getting Connected VPN Name in Python</a></p>
<p>And tried:</p>
<pre><code>import NetworkManager
for conn in NetworkManager.NetworkManager.ActiveConnections:
    print('Name: %s; vpn?: %s' % (conn.Id, conn.Vpn))
</code></pre>
<p>I am getting this error:</p>
<pre><code>    ImportError                               
    Traceback (most recent call last)
    &lt;ipython-input-6-52b1e422fff2&gt; in &lt;module&gt;()
    ----&gt; 1 import NetworkManager
          2 
          3 for conn in NetworkManager.NetworkManager.ActiveConnections:
          4     print('Name: %s; vpn?: %s' % (conn.Id, conn.Vpn))

    ImportError: No module named 'NetworkManager'
</code></pre>
<p>When tried to "pip install python-NetworManager" I got this error:</p>
<pre><code>Failed building wheel for dbus-python
  Running setup.py clean for dbus-python
Successfully built python-networkmanager
Failed to build dbus-python
Installing collected packages: dbus-python, python-networkmanager
  Running setup.py install for dbus-python ... error
    Complete output from command C:\Anaconda3\python.exe -u -c "import setuptools, tokenize;__file__='C:\\Users\\samola\\AppData\\Local\\Temp\\1\\pip-install-p1feeotm\\dbus-python\\setup.py';f=getattr(tokenize, 'open', open)(__file__);code=f.read().replace('\r\n', '\n');f.close();exec(compile(code, __file__, 'exec'))" install --record C:\Users\samola\AppData\Local\Temp\1\pip-record-91dmsyv1\install-record.txt --single-version-externally-managed --compile:
    running install
    running build
    creating C:\Users\samola\AppData\Local\Temp\1\pip-install-p1feeotm\dbus-python\build
    creating C:\Users\samola\AppData\Local\Temp\1\pip-install-p1feeotm\dbus-python\build\temp.win-amd64-3.6
    error: [WinError 193] %1 is not a valid Win32 application

    ----------------------------------------
Command "C:\Anaconda3\python.exe -u -c "import setuptools, tokenize;__file__='C:\\Users\\samola\\AppData\\Local\\Temp\\1\\pip-install-p1feeotm\\dbus-python\\setup.py';f=getattr(tokenize, 'open', open)(__file__);code=f.read().replace('\r\n', '\n');f.close();exec(compile(code, __file__, 'exec'))" install --record C:\Users\samola\AppData\Local\Temp\1\pip-record-91dmsyv1\install-record.txt --single-version-externally-managed --compile" failed with error code 1 in C:\Users\samola\AppData\Local\Temp\1\pip-install-p1feeotm\dbus-python\
</code></pre>
<p>Later when I tried to "pip install dbus-python" i got this error:</p>
<pre><code>  Failed building wheel for dbus-python
  Running setup.py clean for dbus-python
Failed to build dbus-python
Installing collected packages: dbus-python
  Running setup.py install for dbus-python ... error
    Complete output from command C:\Anaconda3\python.exe -u -c "import setuptools, tokenize;__file__='C:\\Users\\samola\\AppData\\Local\\Temp\\1\\pip-install-lp5w3k60\\dbus-python\\setup.py';f=getattr(tokenize, 'open', open)(__file__);code=f.read().replace('\r\n', '\n');f.close();exec(compile(code, __file__, 'exec'))" install --record C:\Users\samola\AppData\Local\Temp\1\pip-record-7mvtqy_d\install-record.txt --single-version-externally-managed --compile:
    running install
    running build
    creating C:\Users\samola\AppData\Local\Temp\1\pip-install-lp5w3k60\dbus-python\build
    creating C:\Users\samola\AppData\Local\Temp\1\pip-install-lp5w3k60\dbus-python\build\temp.win-amd64-3.6
    error: [WinError 193] %1 is not a valid Win32 application

    ----------------------------------------
Command "C:\Anaconda3\python.exe -u -c "import setuptools, tokenize;__file__='C:\\Users\\samola\\AppData\\Local\\Temp\\1\\pip-install-lp5w3k60\\dbus-python\\setup.py';f=getattr(tokenize, 'open', open)(__file__);code=f.read().replace('\r\n', '\n');f.close();exec(compile(code, __file__, 'exec'))" install --record C:\Users\samola\AppData\Local\Temp\1\pip-record-7mvtqy_d\install-record.txt --single-version-externally-managed --compile" failed with error code 1 in C:\Users\samola\AppData\Local\Temp\1\pip-install-lp5w3k60\dbus-python\
</code></pre>
<p>I have also tried following POST as well with no help:<a href="https://www.reddit.com/r/learnpython/comments/5qkpu1/python_script_to_check_if_connected_to_vpn_or_not/" rel="nofollow noreferrer">https://www.reddit.com/r/learnpython/comments/5qkpu1/python_script_to_check_if_connected_to_vpn_or_not/</a></p>
<pre><code>host = *******
ping = subprocess.Popen(["ping.exe","-n","1","-w","1",host],stdout = subprocess.PIPE).communicate()[0]
if ('unreachable' in str(ping)) or ('timed' in str(ping)) or ('failure' in str(ping)):
    ping_chk = 0
else:
    ping_chk = 1 

 if ping_chk == 1:
     print ("VPN Connected")
 else:
    print ("VPN Not Connected")
</code></pre>
<p>Throwing me error:</p>
<pre><code>File "&lt;ipython-input-5-6f992511172f&gt;", line 1
    host = 192.168.*.*
                   ^
SyntaxError: invalid syntax
</code></pre>
<p>I am not sure what wrong I am doing right now.
Note: I am doing all this in Corporate VPN connection.</p>
</div>
<div class="post-text" itemprop="text">
<pre><code>pip install python-NetworManager
</code></pre>
<blockquote>
<p>error: [WinError 193] %1 is not a valid Win32 application</p>
</blockquote>
<p>NetworManager is <a href="https://github.com/seveas/python-networkmanager/blob/ab5f7ae93b8e9a03147d63091177913b2107b3d9/setup.py#L20" rel="nofollow noreferrer">Linux-only</a> application.</p>
<pre><code>    host = 192.168.*.*
                   ^
SyntaxError: invalid syntax
</code></pre>
<p>IP address must be a string:</p>
<pre><code>    host = '192.168.*.*'
</code></pre>
</div>
<div class="post-text" itemprop="text">
<h2>Here is code which tells if you are connected to VPN or NOT.</h2>
<p><strong>Note:</strong> <em>IPv4 adress of the machine on VPN might change each time you connect to VPN.</em></p>
<pre><code>import subprocess
host = '**.***.***.***' 
#IPv4 should be string ''
#IPv4 Address (while connected to VPN in command prompt type: ipconfig",
copy IPv4 Address digits and paste as "host = ", 
#IPv4 Address. changes each time we freshly connect to VPN. )
ping = subprocess.Popen(["ping.exe","-n","1","-w","1",host],stdout = subprocess.PIPE).communicate()[0]
if ('unreachable' in str(ping)) or ('timed' in str(ping)) or ('failure' in str(ping)):
    ping_chk = 0
else:
    ping_chk = 1 

if ping_chk == 1:
     print ("VPN Connected")
else:
    print ("VPN Not Connected")
</code></pre>
</div>
